<resources>
    <string name="app_name">Weather</string>
    <string name="degree_symbol">°</string>
    <string name="degree_symbol_fahrenheit">°F</string>
    <string name="degree_symbol_celsius">°C</string>
    <string name="current_temperature">%1$d%2$s</string>
    <string name="percent_symbol">%1$d%%</string>
    <string name="feels_like">Feels like %1$d%2$s</string>
    <string name="high_and_low">High: %1$d%2$s Low: %3$d%4$s</string>
    <string name="wind">%1$smph</string>

    <string name="current_clouds">Clouds: %1$d%%</string>
    <string name="visibility">Visibility: %1$smi</string>
    <string name="current_wind">Wind: %1$smph</string>
    <string name="current_humidity">Humidity: %1$d%%</string>
    <string name="uv_index">UV Index: %1$.1f</string>
    <string name="dew_point">Dew point: %1$d%2$s</string>

    <string name="high">↑ %1$d%2$s</string>
    <string name="low">↓ %1$d%2$s </string>

    <string name="daily_clouds">Clouds</string>
    <string name="daily_humidity">Humidity</string>
    <string name="precipitation">Precipitation</string>
    <string name="daily_wind">Wind</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>

    <string name="hourly_temperature">%1$d°</string>

    <string name="error">ERROR ENCOUNTERED!</string>

    <string name="location_off">Please enable Location Services on your device</string>

    <string name="settings">Settings</string>

    <string name="permission_needed">Location permission needed</string>

    <string name="city_not_found">City not found</string>

    <string name="no_internet">It looks like you are offline. Try again when your connection is better.</string>

    <string name="temperature_scale">Temperature Scale</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="time_format">Time format</string>
    <string name="twelve_hour">12-hour</string>
    <string name="twenty_four_hour">24-hour</string>
    <string name="on_start_search_preference">On Start Search Preference</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="use_last_search_term">Use Last SearchTerm</string>
    <string name="enter_a_city">Enter a City</string>
</resources>