<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_scale"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/temp_scale_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="25dp">

            <RadioButton
                android:id="@+id/radio_fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_format"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/time_format_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="25dp">

            <RadioButton
                android:id="@+id/radio_12_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twelve_hour"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_24_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_four_hour"
                android:textSize="20sp" />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_start_search_preference"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/radio_group_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_current_location"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_last_search_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_last_search_term"
                android:textSize="20sp" />
        </RadioGroup>


    </LinearLayout>


</ScrollView>