<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    style="@style/CustomCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="@drawable/daily_forecast_background"
    app:cardElevation="5dp">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical"
                android:paddingStart="15sp"
                android:paddingEnd="15sp">

                <TextView
                    android:id="@+id/date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Wednesday" />

                <TextView
                    android:id="@+id/forecasted_day_description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Heavy rain" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingStart="7.5dp"
                android:paddingEnd="7.5dp">

                <ImageView
                    android:id="@+id/forecasted_day_image_view"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_marginEnd="15sp"
                    android:src="@drawable/_09d" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/forecasted_high_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        tools:text="83°" />

                    <TextView
                        android:id="@+id/forecasted_low_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        tools:text="65°" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/details_indicator"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/expand_more" />

            </LinearLayout>
        </RelativeLayout>

        <GridLayout
            android:id="@+id/details_grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:paddingBottom="20dp"
            android:rowCount="2"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_columnWeight="1"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/precipitation_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precipitation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/precipitation_progress_bar"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="10dp"
                    android:indeterminateOnly="false"
                    android:progress="1"
                    android:progressDrawable="@drawable/circle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/precipitation_text_view"
                    tools:progress="0" />

                <TextView
                    android:id="@+id/precipitation_text_view_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/precipitation_progress_bar"
                    app:layout_constraintEnd_toEndOf="@+id/precipitation_progress_bar"
                    app:layout_constraintStart_toStartOf="@+id/precipitation_progress_bar"
                    app:layout_constraintTop_toTopOf="@+id/precipitation_progress_bar"
                    tools:text="100%" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_columnWeight="1"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/clouds_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_clouds"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/clouds_progress_bar"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="10dp"
                    android:indeterminateOnly="false"
                    android:progress="1"
                    android:progressDrawable="@drawable/circle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/clouds_text_view"
                    tools:progress="60" />

                <TextView
                    android:id="@+id/clouds_text_view_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/clouds_progress_bar"
                    app:layout_constraintEnd_toEndOf="@+id/clouds_progress_bar"
                    app:layout_constraintStart_toStartOf="@+id/clouds_progress_bar"
                    app:layout_constraintTop_toTopOf="@+id/clouds_progress_bar"
                    tools:text="60%" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_columnWeight="1"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/humidity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_humidity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/humidity_progress_bar"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="10dp"
                    android:indeterminateOnly="false"
                    android:progress="1"
                    android:progressDrawable="@drawable/circle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/humidity_text_view"
                    tools:progress="0" />

                <TextView
                    android:id="@+id/humidity_text_view_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/humidity_progress_bar"
                    app:layout_constraintEnd_toEndOf="@+id/humidity_progress_bar"
                    app:layout_constraintStart_toStartOf="@+id/humidity_progress_bar"
                    app:layout_constraintTop_toTopOf="@+id/humidity_progress_bar"
                    tools:text="60%" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/daily_wind" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/wind" />

                    <TextView
                        android:id="@+id/wind_speed_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="16sp"
                        tools:text="88mph" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sunrise" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise" />

                    <TextView
                        android:id="@+id/sunrise_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="16sp"
                        tools:text="6:01am" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sunset" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset" />

                    <TextView
                        android:id="@+id/sunset_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="16sp"
                        tools:text="8:23am" />

                </LinearLayout>
            </LinearLayout>

        </GridLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>